--- a/index.html
+++ b/index.html
@@ -1,51 +1,60 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formulário de Contato</title>
 </head>
+
 <body>
 
-<h1><mark>Formulário de Contato</mark></h1>
+    <h1><mark>Formulário de Contato</mark></h1>
 
-<form action="enviar.php" method="post">
-    <label for="nome"><strong>Nome:</strong></label>
-    <input type="text" id="nome" name="nome" required>
-    <br>
-    <small>Insira seu nome completo.</small>
-    <br><br>
+    <form action="enviar.php" method="post">
+        <label for="nome"><strong>Nome:</strong></label>
+        <input type="text" id="nome" name="nome" required>
+        <br>
+        <small>Insira seu nome completo.</small>
+        <br><br>
 
-    <label for="email"><strong>E-mail:</strong></label>
-    <input type="email" id="email" name="email" required>
-    <br>
-    <small>Insira um endereço válido, exemplo: <em>email@dominio.com</em>.</small>
-    <br><br>
+        <label for="email"><strong>E-mail:</strong></label>
+        <input type="email" id="email" name="email" required>
+        <br>
+        <small>Insira um endereço válido, exemplo: <em>email@dominio.com</em>.</small>
+        <br><br>
+        <label for="endereço"><big><strong>Endereço:</strong></big></label><br>
+        <textarea id="endereço" name="endereço" required></textarea>
+        <br>
+        <small>Escreva seu endereço.</small>
+        <br><br>
 
-    <label for="mensagem"><big><strong>Mensagem:</strong></big></label><br>
-    <textarea id="mensagem" name="mensagem" required></textarea>
-    <br>
-    <small>Escreva sua mensagem detalhada.</small>
-    <br><br>
+        <label for="mensagem"><big><strong>Mensagem:</strong></big></label><br>
+        <textarea id="mensagem" name="mensagem" required></textarea>
+        <br>
+        <small>Escreva sua mensagem detalhada.</small>
+        <br><br>
 
-    <blockquote cite="https://books.google.com">
-        "Deixe sua mensagem com clareza, pois a comunicação é fundamental."
-    </blockquote>
-    <q>Respeito e cordialidade são essenciais</q><br><br>
+        <blockquote cite="https://books.google.com">
+            "Deixe sua mensagem com clareza, pois a comunicação é fundamental."
+        </blockquote>
+        <q>Respeito e cordialidade são essenciais</q><br><br>
 
-    <input type="submit" value="Enviar">
-</form>
+        <input type="submit" value="Enviar">
+    </form>
 
-<p>
-    Este é um exemplo de <abbr title="HyperText Markup Language">HTML</abbr> melhorado, que utiliza as melhores práticas de 
-    <strong>acessibilidade</strong> e <em>semântica</em> na construção de formulários web. 
-    Foram usados elementos para destacar informações importantes e melhorar a experiência do usuário. 
-    Tecnologias como <abbr title="Cascading Style Sheets">CSS</abbr> e <abbr title="JavaScript">JS</abbr> também podem ser integradas para 
-    otimizar o <ins>design</ins> e a <ins>funcionalidade</ins> das páginas.
-    <br><small><del>Elementos obsoletos</del> foram removidos para manter o código limpo e eficiente.</small>
-</p>
+    <p>
+        Este é um exemplo de <abbr title="HyperText Markup Language">HTML</abbr> melhorado, que utiliza as melhores
+        práticas de
+        <strong>acessibilidade</strong> e <em>semântica</em> na construção de formulários web.
+        Foram usados elementos para destacar informações importantes e melhorar a experiência do usuário.
+        Tecnologias como <abbr title="Cascading Style Sheets">CSS</abbr> e <abbr title="JavaScript">JS</abbr> também
+        podem ser integradas para
+        otimizar o <ins>design</ins> e a <ins>funcionalidade</ins> das páginas.
+        <br><small><del>Elementos obsoletos</del> foram removidos para manter o código limpo e eficiente.</small>
+    </p>
 
-<pre>
+    <pre>
 <code>
 Lista de itens importantes:
 <ol>
@@ -53,10 +62,20 @@ Lista de itens importantes:
     <li><strong>E-mail</strong> - Canal de contato.</li>
     <li>Mensagem - <mark>Conteúdo principal</mark> do formulário.</li>
 </ol>
-</code>
+   </code>
 </pre>
 
-<p><bdo dir="rtl">Este texto está invertido.</bdo></p>
+    <h1> <mark>LISTA DE TURMAS</mark>  </h1> 
+    <li> 1- Turma Q1</li>
+    <ol>A. Aluno: João</ol>
+    <ol>B. Aluno: Paulo</ol>
+
+    <li> 2- Turma Q2</li>
+    <ol>A. Aluno: Maria</ol>
+    <ol>B. Aluno: Sandra</ol>
+
+    <p><bdo dir="rtl">Este texto está invertido.</bdo></p>
 
 </body>
+
 </html>
